# YNU_AG-CNN

./: .gitignore  CHANGELOG.md  README.md  README_Python.md  requirements.txt
core/: Flatten.py  __init__.py  activations.py  base.py  batchnorm.py  conv.py  im2col.py  initializers.py  linear.py  test.py
env/: game.py  mcts_alphaZero.py  train.py
gat/: game.py  human_play.py  human_playgui.py  mcts_alphaZero.py  mcts_pure.py  train.py
gat_cpp/: CMakeLists.txt  README.md  cpp_game.py  cpp_human_play.py  cpp_human_playgui.py  cpp_mcts_alphaZero.py  cpp_train.py  verify_nn_mcts.py
gat_cpp/src/: bindings.cpp  board.cpp  board.hpp  mcts_stub.cpp  mcts_stub.hpp
gat_cpp/tools/: convert_legacy_model_to_pth.py  run_parallel_session_bench.py  run_parallel_smoke.py  run_train_server.sh
models/gui_models/: best_policy_8_8_5.pth  best_policy_8_8_5_testmodel1.pth  best_policy_8_8_5_testmodel2.pth
pipeline/: losses.py  optimizer.py  policy_value_net.py  test.py
